[gd_scene load_steps=16 format=2]

[ext_resource path="res://board/board.gd" type="Script" id=1]
[ext_resource path="res://bonus_effect_manager/bonus_effect_manager.tscn" type="PackedScene" id=2]
[ext_resource path="res://materials/background_material.tres" type="Material" id=3]
[ext_resource path="res://textures/black.png" type="Texture" id=4]
[ext_resource path="res://board/arealost.gd" type="Script" id=5]
[ext_resource path="res://board/collision.gd" type="Script" id=6]
[ext_resource path="res://level/level.tscn" type="PackedScene" id=7]
[ext_resource path="res://wall/wall.tscn" type="PackedScene" id=8]
[ext_resource path="res://game_ui/game_ui.tscn" type="PackedScene" id=9]
[ext_resource path="res://paddle/paddle.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/pad.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/wall.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/brick01.wav" type="AudioStream" id=13]


[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 512, 5 )

[sub_resource type="Animation" id=2]

resource_name = "level_transition"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": ""
}, {
"args": [  ],
"method": "init_level"
} ]
}

[node name="board" type="Node" index="0"]

script = ExtResource( 1 )

[node name="bonus_effect_manager" parent="." index="0" instance=ExtResource( 2 )]

[node name="background" type="Sprite" parent="." index="1"]

material = ExtResource( 3 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 768 )
_sections_unfolded = [ "Material", "Offset", "Region", "Transform" ]

[node name="area_lost" type="Area2D" parent="." index="2"]

position = Vector2( 512, 736 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_lost" index="0"]

shape = SubResource( 1 )
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="level" parent="." index="3" instance=ExtResource( 7 )]

_sections_unfolded = [ "Transform" ]

[node name="left_wall" parent="." index="4" instance=ExtResource( 8 )]

position = Vector2( 5, 385 )
_sections_unfolded = [ "Transform" ]
orientation = "vertical"
color = Color( 0, 0.333333, 0, 1 )
length = 768.0

[node name="top_wall" parent="." index="5" instance=ExtResource( 8 )]

position = Vector2( 512, 5 )
orientation = "horizontal"
color = Color( 0, 0.333333, 0, 1 )
length = 1024.0

[node name="right_wall" parent="." index="6" instance=ExtResource( 8 )]

position = Vector2( 1019, 385 )
_sections_unfolded = [ "Transform" ]
orientation = "vertical"
color = Color( 0, 0.333333, 0, 1 )
length = 768.0

[node name="game_ui" parent="." index="7" instance=ExtResource( 9 )]

position = Vector2( 21, 723 )

[node name="paddle" parent="." index="8" instance=ExtResource( 10 )]

position = Vector2( 512, 700 )
_sections_unfolded = [ "Transform" ]

[node name="board_animation" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/level_transition = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="level_complete" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1019.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pad_sound" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="wall_sound" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 12 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="brick_sound" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 13 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="area_lost" to="." method="_on_area_lost_body_entered"]


